--- a/data/thombashi_tcconfig.json
+++ b/data/thombashi_tcconfig.json
@@ -1,6 +1,6 @@
 {
     "id": "thombashi/tcconfig",
-    "fetched_at": "2021-05-23T19:00:36",
+    "fetched_at": "2021-10-17T22:38:48",
     "data_version": 2,
     "result": "success",
     "avatar_url": "https://avatars.githubusercontent.com/u/15517661?v=4",
@@ -10,8 +10,8 @@
     "emojis": {},
     "html_url": "https://github.com/thombashi/tcconfig",
     "name": "tcconfig",
-    "updated_at": "2021-05-22T13:12:17",
-    "forks_count": 65,
+    "updated_at": "2021-10-14T19:17:34",
+    "forks_count": 71,
     "has_issues": true,
     "has_wiki": false,
     "language": "Python",
@@ -22,9 +22,9 @@
             "Makefile"
         ],
         "data": [
-            277066,
+            277242,
             2841,
-            957
+            929
         ]
     },
     "languages_count": 3,
@@ -33,38 +33,17 @@
     "open_issues_count": 11,
     "organization": {},
     "repo_homepage": "https://tcconfig.rtfd.io/",
-    "stargazers_count": 534,
+    "stargazers_count": 570,
     "topics": [
-        "linux",
-        "docker",
-        "wrapper",
-        "network",
         "cli-app",
+        "docker",
+        "linux",
+        "network",
         "tc",
-        "traffic-shaping"
+        "traffic-shaping",
+        "wrapper"
     ],
     "participation": [
-        2,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        42,
-        4,
-        0,
-        0,
-        4,
-        2,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
         0,
         0,
         0,
@@ -95,13 +74,34 @@
         0,
         11,
         0,
+        0,
+        0,
+        9,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
         0
     ],
-    "commits_last_year": 68,
+    "commits_last_year": 23,
     "latest_tag": "v0.26.0",
     "branches_count": 1,
     "pulls_count": 2,
-    "subscribers_count": 24,
+    "subscribers_count": 25,
     "license": {
         "key": "mit",
         "name": "MIT License",
